# Breast-Cancer-API

./: .gitignore  Dockerfile  README.md  entrypoint.sh  pyproject.toml
examples/: invalid_type.json  missing_features.json  missing_key.json  valid_request.json  wrong_features_type.json
src/api_breast_cancer_prediction/: __init__.py  __main__.py  app.py  logging_config.py  test_app.py  training.py
